--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dagre": "^0.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "reactflow": "^11.11.4",
     "web-vitals": "^2.1.4"
