--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "reactflow": "^11.11.4",
+    "thebe": "^0.9.1",
+    "thebelab": "^0.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
