--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     ]
   },
   "devDependencies": {
-    "raw-loader": "^4.0.2"
+    "buffer": "^6.0.3",
+    "process": "^0.11.10",
+    "raw-loader": "^4.0.2",
+    "stream-browserify": "^3.0.0"
   }
 }
