--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "reactflow": "^11.11.4",
     "thebe": "^0.9.1",
     "thebelab": "^0.5.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^4.47.0",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,6 +47,7 @@
     "buffer": "^6.0.3",
     "process": "^0.11.10",
     "raw-loader": "^4.0.2",
+    "react-app-rewired": "^2.2.1",
     "stream-browserify": "^3.0.0"
   }
 }
